; ModuleID = '/home/carl/AnghaBench/robotjs/src/extr_bitmap_find.c_countOfBitmapInRect.c'
source_filename = "/home/carl/AnghaBench/robotjs/src/extr_bitmap_find.c_countOfBitmapInRect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@MMPointZero = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @countOfBitmapInRect(%struct.TYPE_7__* %0, %struct.TYPE_7__* %1, i32 %2, float %3) #0 {
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca float, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %6, align 8
  store i32 %2, i32* %7, align 4
  store float %3, float* %8, align 4
  store i64 0, i64* %9, align 8
  %13 = load i32, i32* @MMPointZero, align 4
  store i32 %13, i32* %10, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %15 = call i32 @initBadShiftTable(i32* %11, %struct.TYPE_7__* %14)
  br label %16

16:                                               ; preds = %24, %4
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load float, float* %8, align 4
  %21 = load i32, i32* %10, align 4
  %22 = call i64 @findBitmapInRectAt(%struct.TYPE_7__* %17, %struct.TYPE_7__* %18, i32* %10, i32 %19, float %20, i32 %21, i32* %11)
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %39

24:                                               ; preds = %16
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = sub nsw i32 %27, %30
  %32 = add nsw i32 %31, 1
  %33 = sext i32 %32 to i64
  store i64 %33, i64* %12, align 8
  %34 = load i64, i64* %9, align 8
  %35 = add i64 %34, 1
  store i64 %35, i64* %9, align 8
  %36 = load i32, i32* %10, align 4
  %37 = load i64, i64* %12, align 8
  %38 = call i32 @ITER_NEXT_POINT(i32 %36, i64 %37, i32 0)
  br label %16

39:                                               ; preds = %16
  %40 = call i32 @destroyBadShiftTable(i32* %11)
  %41 = load i64, i64* %9, align 8
  ret i64 %41
}

declare dso_local i32 @initBadShiftTable(i32*, %struct.TYPE_7__*) #1

declare dso_local i64 @findBitmapInRectAt(%struct.TYPE_7__*, %struct.TYPE_7__*, i32*, i32, float, i32, i32*) #1

declare dso_local i32 @ITER_NEXT_POINT(i32, i64, i32) #1

declare dso_local i32 @destroyBadShiftTable(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
